update kafka settings
